--- a/Danji/Base.lproj/Main.storyboard
+++ b/Danji/Base.lproj/Main.storyboard
@@ -821,14 +821,13 @@
         <!--Select an Album-->
         <scene sceneID="xDP-YS-Sqc">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="eGr-8N-RV4" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="mCb-a7-tlT" customClass="DJAlbumPickerController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="104" sectionHeaderHeight="22" sectionFooterHeight="22" id="QVc-U4-1vn">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="albumCell" rowHeight="104" id="Cfs-f3-oyq">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="albumCell" rowHeight="104" id="Cfs-f3-oyq">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Cfs-f3-oyq" id="UbP-Mr-YF8">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -850,66 +849,53 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
-                        <segue destination="D8e-od-xBM" kind="show" identifier="openPhoto" id="rR5-zc-Xgb"/>
+                        <segue destination="D8e-od-xBM" kind="show" identifier="openAlbum" id="rR5-zc-Xgb"/>
                     </connections>
                 </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eGr-8N-RV4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-367" y="690"/>
         </scene>
-        <!--Pick Photos-->
-        <scene sceneID="4sZ-6o-WZv">
-            <objects>
-                <tableViewController id="IQM-QX-xog" customClass="DJAssetTablePicker" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="85" sectionHeaderHeight="22" sectionFooterHeight="22" id="kXS-Pj-fzi">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="photoCell" rowHeight="85" id="XoE-xF-oYn">
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XoE-xF-oYn" id="1fe-RR-FFs">
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="IQM-QX-xog" id="DdJ-4F-bI5"/>
-                            <outlet property="delegate" destination="IQM-QX-xog" id="mRe-9F-1Ox"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Pick Photos" id="V4a-m2-E9D">
-                        <barButtonItem key="backBarButtonItem" title="Back" id="8AV-Eo-Vmo"/>
-                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="NQo-6Q-E2E"/>
-                    </navigationItem>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qwh-pe-0D6" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1219" y="690"/>
-        </scene>
-        <!--select Photos-->
+        <!--Select Photos-->
         <scene sceneID="HGk-Ib-JtS">
             <objects>
-                <collectionViewController id="34c-9H-PVa" customClass="DJAssetTablePicker" sceneMemberID="viewController">
+                <collectionViewController id="34c-9H-PVa" customClass="DJAssetPicker" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="iKa-6e-Waz">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="QPp-sv-4xQ">
-                            <size key="itemSize" width="50" height="50"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="3" minimumInteritemSpacing="3" id="QPp-sv-4xQ">
+                            <size key="itemSize" width="75" height="75"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="sectionInset" minX="3" minY="3" maxX="3" maxY="3"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="shs-Kb-zIn">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="shs-Kb-zIn" customClass="DJAssetCell">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="75" height="75"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5iU-9Q-ekS">
+                                            <rect key="frame" x="0.0" y="0.0" width="75" height="75"/>
+                                        </imageView>
+                                    </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <constraints>
+                                    <constraint firstItem="5iU-9Q-ekS" firstAttribute="leading" secondItem="shs-Kb-zIn" secondAttribute="leading" id="1Rj-Oh-TWz"/>
+                                    <constraint firstAttribute="bottom" secondItem="5iU-9Q-ekS" secondAttribute="bottom" id="9yS-Yi-cgN"/>
+                                    <constraint firstAttribute="bottom" secondItem="5iU-9Q-ekS" secondAttribute="bottom" id="Ipv-xN-y9Y"/>
+                                    <constraint firstAttribute="trailing" secondItem="5iU-9Q-ekS" secondAttribute="trailing" id="QMD-cL-shU"/>
+                                    <constraint firstItem="5iU-9Q-ekS" firstAttribute="top" secondItem="shs-Kb-zIn" secondAttribute="top" id="pgh-mI-WMq"/>
+                                    <constraint firstAttribute="trailing" secondItem="5iU-9Q-ekS" secondAttribute="trailing" id="pqs-2O-3UP"/>
+                                    <constraint firstAttribute="trailing" secondItem="5iU-9Q-ekS" secondAttribute="trailing" id="vQI-9h-Qf4"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="mPhoto" destination="5iU-9Q-ekS" id="n3N-vK-HSP"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -917,15 +903,19 @@
                             <outlet property="delegate" destination="34c-9H-PVa" id="2Is-uk-iIt"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" title="select Photos" id="CtW-hV-vrm">
-                        <barButtonItem key="rightBarButtonItem" title="Item" systemItem="done" id="iFs-4U-etO"/>
+                    <navigationItem key="navigationItem" title="Select Photos" id="CtW-hV-vrm">
+                        <barButtonItem key="rightBarButtonItem" title="Item" systemItem="done" id="iFs-4U-etO">
+                            <connections>
+                                <action selector="doneButtonTapped:" destination="34c-9H-PVa" id="l1d-P5-I3o"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jXC-cp-IGt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="407" y="690"/>
+            <point key="canvasLocation" x="435" y="690"/>
         </scene>
         <!--Dialog Write Controller-->
         <scene sceneID="gE6-Vm-FDc">
@@ -1138,10 +1128,10 @@
             </objects>
             <point key="canvasLocation" x="-1205" y="6"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Image Picker Controller-->
         <scene sceneID="H8y-N6-zeQ">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RQ0-rN-znk" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RQ0-rN-znk" customClass="DJImagePickerController" sceneMemberID="viewController">
                     <toolbarItems/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="d3o-Zx-Z8k">
